--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -102,8 +102,7 @@
 
         new Typewriter('#typewriter2', {
             delay: 20,
-        }).pauseFor(1000)
-            .typeString('Encantado de conocerte.')
+        }).typeString('Encantado de conocerte.')
             .pauseFor(3000)
             .deleteAll(10)
             .typeString('HTML, CSS, jQuery, PHP, MySQL, APIs y más.')
